# print_it_sdondley

./: .gitignore  package-lock.json  pyproject.toml
print_it_sdondley/: print_it_sdondley.py
tests/: test_01-basic.py
